fixed horizontal scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -181,8 +181,8 @@ h3[class$="-header"] {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: url("/img/web-dev.jpg");
   background-size: cover;
   background-repeat: no-repeat;
